<resources>
    <string name="timeout">There are some connection issues, changes may require time</string>
    <string name="noInterested">No interested users yet</string>
    <string name="mapfragment">Location</string>
    <string name="yourPosition">Your position</string>
    <string name="itemPosition">The item is here</string>
    <string name="networkerror">Check the connection and retry.</string>
    <string name="mapHint">Tap a position on the map to change your location</string>
    <string name="channeld_id">reuseitappchannelid</string>
    <string name="locationError">Error, this is not an acceptable location.</string>
    <string name="maps_key">AIzaSyBYZ22DpnUuKnh-hFfXsqOZ7Z8_yul4XyA</string>
    <string name="app_name">ReuseIt</string>
    <string name="edit">Edit</string>
    <string name="shared_pref">SharedPrefs</string>
    <string name="profile_sharedPref">profileSharedPref</string>
    <string name="item_sharedPref">itemSharedPref</string>
    <string name="itemList_sharedPref">itemListSharedPref</string>
    <string name="defaultWelcome">Welcome to ReuseIt!</string>
    <string name="defaultFullName">Full name</string>
    <string name="defaultNickname">Nickname</string>
    <string name="defaultEmail">email@address</string>
    <string name="email">Email</string>
    <string name="defaultLocation">Geographic area of interest</string>
    <string name="defaultAvatar">Avatar</string>
    <string name="defaultBio">Update your bio!</string>
    <string name="shortBio">Short bio</string>
    <string name="defaultPhoneNumber">Phone number</string>
    <string name="defaultTitle">Item title</string>
    <string name="defaultDesc">Description</string>
    <string name="defaultCategory">Category</string>
    <string name="defaultSubCategory">SubCategory</string>
    <string name="defaultPrice">Price</string>
    <string name="defaultItemLocation">Location</string>
    <string name="defaultCondition">Condition</string>
    <string name="defaultExpire">Expiry date</string>
    <string name="defaultLastUpdate">Last Update</string>
    <string name="itemExpire">This item will expire on</string>
    <string name="notSpecified">Not specified</string>
    <string name="save">Save</string>
    <string name="actions">Actions</string>
    <string name="info">General info</string>
    <string name="reuploadImage">Changing the image is not reversible. If you changed it, please upload it again</string>
    <string name="picFromGallery">Select from gallery</string>
    <string name="picFromCamera">Take from camera</string>
    <string name="photo">Photo</string>
    <string name="mail_error">Email address not valid</string>
    <string name="nickname_error">Nickname not valid</string>
    <string name="phoneNumber_error">Phone number not valid</string>
    <string name="location_error">Location not valid</string>
    <string name="price_error">Price not valid</string>
    <string name="rotate_error">You must choose a photo a grant the required permission</string>
    <string name="permission_expl">This app requires to write on external permission to take a profile picture</string>
    <string name="permission_err">Cannot take picture or rotate without permission</string>
    <string name="close_dialog">Close</string>
    <string name="warning_dialog">Warning</string>
    <string name="image_not_found">Cannot find profile image</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Price</string>
    <string name="item_sold">The item was sold</string>
    <string name="item_sold_error">Unexpected error: the item was NOT sold</string>
    <string name="profile_update">Profile updated</string>
    <string name="item_update">Item updated</string>
    <string name="undo">Undo</string>
    <string name="profile_nav">Profile</string>
    <string name="items_nav">Items for sale</string>
    <string name="fav_items_nav">Favorites</string>
    <string name="bought_items_nav">Bought</string>
    <string name="edit_item">Edit item</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="selectSubcat">Select a subcategory</string>
    <string name="no_data_available">No data available</string>
    <string name="frag_list_title">My advertisements</string>
    <string name="frag_item_title">Item</string>
    <string name="frag_profile_title">Profile</string>
    <string name="helper_subcat">Remember to enter a category</string>
    <string name="search_title">Search...</string>
    <string name="filter_title">Filters</string>
    <string name="logout_title">Logout</string>
    <string name="logout_success">Logout successful</string>
    <string name="my_items_nav">My advertisements</string>
    <string name="on_sale_title">Items for sale</string>
    <string name="on_interest_title">Favorites</string>
    <string name="on_bought_title">Bought</string>
    <string name="price_min">Minimun price</string>
    <string name="price_max">Maximum price</string>
    <string name="uid">uid</string>
    <string name="filter_tv">Apply filters</string>
    <string name="cond_new">New</string>
    <string name="cond_as_new">As new</string>
    <string name="cond_opt">Optimal</string>
    <string name="cond_good">Good</string>
    <string name="cond_acc">Acceptable</string>
    <string name="error_data">Please, fill all the fields</string>
    <string name="required_field">This field is required</string>
    <string name="sold">Mark as sold</string>
    <string name="block">Block advertisement</string>
    <string name="available">Mark as available</string>
    <string name="itemSellerLabel">Sold by</string>
    <string name="defaultSeller">Unknown</string>
    <string name="stateAvailable">Available</string>
    <string name="stateBlocked">Blocked</string>
    <string name="stateSold">Sold</string>
    <string name="nickname_already_exist">Nickname already exists</string>
    <string name="blockedHint">The item will be visible only for you</string>
    <string name="favorite">You will receive update on this item state</string>
    <string name="unfavorite">Item removed from favorites</string>
    <string name="alreadyFavorite">You are already interested to this ads</string>
    <string name="channelName">ReuseIt App</string>
    <string name="channelDesc">ReuseIt notifications</string>
    <string name="interestedUsers">Show interested users</string>
    <string name="errorConnection">Connection error</string>
    <string name="imageFragment">Image</string>
    <string name="interestedDialogLabel">Click on user to see his profile</string>
    <string name="radio1">0 – 20 EUR</string>
    <string name="radio2">20 – 50 EUR</string>
    <string name="radio3">50 – 100 EUR</string>
    <string name="radio4">100 – 250 EUR</string>
    <string name="radio5">250 – 1000 EUR</string>
    <string name="radio6">1000+ EUR</string>
    <string name="sell">SELL</string>
    <string name="sellingTitle">Selling item</string>
    <string name="sellingDialog">Are you want to sell item to</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="itemSold">Item was sold to</string>
    <string name="chipsArt">Arts &amp; Crafts</string>
    <string name="chipsSport">Sports and Outdoors</string>
    <string name="chipsBaby">Baby</string>
    <string name="chipsWomen">Women\&#39;s fashion</string>
    <string name="chipsMen">Men\&#39;s fashion</string>
    <string name="chipsElectronics">Electronics</string>
    <string name="chipsGames">Games &amp; Videogames</string>
    <string name="chipsAutomotive">Automotive</string>
    <string name="defaultRating">Rating</string>
    <string name="noRating">No rating yet</string>
    <string name="noComment">No comment yet</string>
    <string name="leaveFeedback">Leave Feedback</string>
    <string name="feedback_done">Thank you for the feedback!</string>
    <string name="leaveComment">Leave a comment..</string>
    <string name="feedback_not_found">You must insert a rating</string>
    <string name="defaultFeedbacks">Feedbacks</string>
    <string name="features">Features</string>
    <string name="clear">Clear</string>
    <string-array name="categories">
        <item>Arts &amp; Crafts</item>
        <item>Sports and Outdoors</item>
        <item>Baby</item>
        <item>Women\&#39;s fashion</item>
        <item>Men\&#39;s fashion</item>
        <item>Electronics</item>
        <item>Games &amp; Videogames</item>
        <item>Automotive</item>
    </string-array>
    <string-array name="conditions">
        <item>@string/cond_new</item>
        <item>@string/cond_as_new</item>
        <item>@string/cond_opt</item>
        <item>@string/cond_good</item>
        <item>@string/cond_acc</item>
    </string-array>
    <string-array name="arts">
        <item>Painting, Drawing &amp; Art Supplies</item>
        <item>Sewing</item>
        <item>Scrapbooking &amp; Stamping</item>
        <item>Party Decorations &amp; Supplies</item>
    </string-array>
    <string-array name="sports">
        <item>Outdoor Recreation</item>
        <item>Sports &amp; Fitness</item>
        <item>Pet Supplies</item>
    </string-array>
    <string-array name="babies">
        <item>Apparel &amp; Accessories</item>
        <item>Baby &amp; Toddler Toys</item>
        <item>Car Seats &amp; Accessories</item>
        <item>Pregnancy &amp; Maternity</item>
        <item>Strollers &amp; Accessories</item>
    </string-array>
    <string-array name="womens">
        <item>Clothing</item>
        <item>Shoes</item>
        <item>Watches</item>
        <item>Handbags</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="mens">
        <item>Clothing</item>
        <item>Shoes</item>
        <item>Watches</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="electronics">
        <item>Computers</item>
        <item>Monitors</item>
        <item>Printers &amp; Scanners</item>
        <item>Camera &amp; Photo</item>
        <item>Smartphone &amp; Tablet</item>
        <item>Audio</item>
        <item>Television &amp; Video</item>
        <item>Video Game Consoles</item>
        <item>Wearable Technology</item>
        <item>Accessories &amp; Supplies</item>
        <item>Irons &amp; Steamers</item>
        <item>Vacuums &amp; Floor Care</item>
    </string-array>
    <string-array name="games">
        <item>Action Figures &amp; Statues</item>
        <item>Arts &amp; Crafts</item>
        <item>Building Toys</item>
        <item>Dolls &amp; Accessories</item>
        <item>Kid\&#39;s Electronics</item>
        <item>Learning &amp; Education</item>
        <item>Tricycles, Scooters &amp; Wagons</item>
        <item>Videogames</item>
    </string-array>
    <string-array name="automotives">
        <item>Car Electronics &amp; Accessories</item>
        <item>Accessories</item>
        <item>Motorcycle &amp; Powersports</item>
        <item>Replacement Parts</item>
        <item>RV Parts &amp; Accessories</item>
        <item>Tools &amp; Equipment</item>
    </string-array>
    <string-array name="subcategories">
        <item>Select a category</item>
    </string-array>

</resources>
