<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_showProfile"
            android:icon="@drawable/ic_person_solid"
            android:title="@string/profile_nav" />

        <item
            android:id="@id/nav_itemList"
            android:icon="@drawable/ic_list_24dp"
            android:title="@string/my_items_nav" />

        <item
            android:id="@id/nav_itemListSale"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/items_nav" />

        <item
            android:id="@id/nav_itemOfInterestList"
            android:icon="@drawable/ic_fav"
            android:title="@string/fav_items_nav" />

        <item
            android:id="@id/nav_boughtItemList"
            android:icon="@drawable/ic_bought"
            android:title="@string/bought_items_nav" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout_title" />
    </group>
</menu>
