<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_tv"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/defaultPrice"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <RadioButton
                    android:id="@+id/radioPrice1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio1"
                    android:layout_marginTop="8dp"/>
                <RadioButton android:id="@+id/radioPrice2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio2"/>
                <RadioButton android:id="@+id/radioPrice3"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio3"/>
                <RadioButton android:id="@+id/radioPrice4"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio4"/>
                <RadioButton android:id="@+id/radioPrice5"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio5"/>
                <RadioButton android:id="@+id/radioPrice6"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio6"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/defaultCondition"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp">

                <CheckBox
                    android:id="@+id/filter_cond_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/cond_new"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/filter_cond_as_new"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filter_cond_as_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/cond_as_new"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/filter_cond_opt"
                    app:layout_constraintStart_toEndOf="@+id/filter_cond_new"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filter_cond_opt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/cond_opt"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/filter_cond_good"
                    app:layout_constraintStart_toEndOf="@+id/filter_cond_as_new"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filter_cond_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/cond_good"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/filter_cond_acc"
                    app:layout_constraintStart_toEndOf="@+id/filter_cond_opt"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/filter_cond_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/cond_acc"
                    android:textAlignment="center"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filter_cond_good"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filter_box_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDFDFD"
                    android:hint="@string/defaultItemLocation"
                    android:inputType="text"
                    android:textColor="#505050" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/filter_ok_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/filter_clear_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/filter_clear_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/filter_ok_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@id/filter_cancel_btn"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/filter_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/undo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/filter_clear_btn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>